# window-switcher

./: Cargo.toml  README.md  install.ps1
.github/workflows/: release.yaml
src/: app.rs  config.rs  foreground.rs  keyboard.rs  main.rs  startup.rs  trayicon.rs
src/utils/: admin.rs  check_error.rs  handle_wrapper.rs  regedit.rs  single_instance.rs  window.rs
tools/inspect-windows/: Cargo.toml
